--- a/components/self-service-portal/src/angular-source/src/app/pages/dashboard/feed/feed.html
+++ b/components/self-service-portal/src/angular-source/src/app/pages/dashboard/feed/feed.html
@@ -1,16 +1,16 @@
 
 <div class="feed-messages-container">
-  <div class="feed-message" *ngFor="let message of feed">
+  <div class="feed-message" *ngFor="let message of feed.data.items">
     <div class="message-icon">
       <img class="photo-icon">
       <span class="sub-photo-icon"></span>
     </div>
     <div class="text-block text-message">
       <div class="message-header">
-        <span class="author">{{ message.data.items.created }} {{ message.data.items.created_date}}</span>
+        <span class="author">{{ message.created }} {{ message.created_date}}</span>
       </div>
       <div class="ago-time">
-        {{ message.data.items.application_id }}
+        {{ message.application_id }}
       </div>
     </div>
   </div>
