--- a/components/authentication-endpoint/src/main/webapp/css/style.css
+++ b/components/authentication-endpoint/src/main/webapp/css/style.css
@@ -301,7 +301,7 @@ dd {
     margin-bottom: 2rem
 }
 .form-fields>li:last-child {
-    margin-bottom: 0
+    margin-bottom: 2rem
 }
 .field--select-block .field__select-native,
 .field--select-block .field__select-custom,
