[SMS Success Page Link Issue] fixed

--- a/components/authentication-endpoint/src/main/webapp/mcx-user-registration/selfcare/index.html
+++ b/components/authentication-endpoint/src/main/webapp/mcx-user-registration/selfcare/index.html
@@ -46,7 +46,7 @@
     <header class="site-header">
       <div class="site-header__inner site__wrap">
         <h1 class="visuallyhidden">Mobile&nbsp;Connect</h1>
-        <a href="/"><img src="mcresources/img/svg/mobile-connect.svg" alt="Mobile Connect&nbsp;Logo" width="150" class="site-header__logo"></a>
+        <a href="#"><img src="mcresources/img/svg/mobile-connect.svg" alt="Mobile Connect&nbsp;Logo" width="150" class="site-header__logo"></a>
         <!-- <form action="/lang" class="site-header__lang-menu field--select field--select-plain" novalidate>
           <label for="field-select-lang" class="visuallyhidden">Language:</label>
           <select id="field-select-lang" name="lang" class="field__select-native js-transparent">
