--- a/components/authentication-endpoint/src/main/webapp/mcx-user-registration/mcresources/css/style.css
+++ b/components/authentication-endpoint/src/main/webapp/mcx-user-registration/mcresources/css/style.css
@@ -62,8 +62,8 @@
 	padding: .75rem 1.25rem;
 }
 
-.btn--white{ 
-	font-size: 1.1rem; 
+.btn--white{
+	font-size: 1.1rem;
 	color: #ffffff !important;
 }
 
@@ -74,6 +74,65 @@
  -webkit-transform: scale(1.5); /* Safari and Chrome */
  -o-transform: scale(1.5); /* Opera */
  transform: scale(1.5);
+ padding: 5px;
+}
+
+/***************** end style *************/
+
+[data-toggle="collapse"] {
+  cursor: pointer;
+}
+[data-toggle="collapse"][aria-expanded="true"] .fa-chevron-right:before {
+  content: "\f078";
+}
+
+.fa.pull-right {
+    margin-top: 0.5em;
+    margin-left: .3em;
+}
+
+.list-group {
+    width: 100%;
+}
+
+.list-group .list-group-heading{
+    width: 100%;
+}
+
+.list-group {
+    padding-left: 0;
+    margin-bottom: 20px;
+}
+
+.list-group-item {
+    position: relative;
+    display: block;
+    padding: 10px 15px;
+    margin-bottom: -1px;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-left: 0px;
+    border-right: 0px;
+}
+
+.list-group {
+	margin-bottom: 0;
+}
+
+.list-group .list-group-item {
+	border-radius: 0;
+	border-left: none;
+	border-right: none;
+}
+
+.btn--white{ font-size: 1.1rem; color: #ffffff !important;}
+
+#tc_checkbox {
+/* Double-sized Checkboxes */
+ -ms-transform: scale(1.5); /* IE */
+ -moz-transform: scale(1.5); /* FF */
+ -webkit-transform: scale(1.5); /* Safari and Chrome */
+ -o-transform: scale(1.5); /* Opera */
  padding: 5px;
 }
 
@@ -1101,6 +1160,23 @@ a:focus {
     background: 0;
     border: 0
 }
+
+.btn-danger {
+    color: #fff;
+    background-color: #d9534f;
+    border-color: #d43f3a;
+}
+
+.btn-normal {
+    color: #fff !important;
+    background-color:#463F61 !important;
+    border-color: #463F61 !important;
+}
+
+.btn--topmargin{
+    margin-top: 6px !important;
+}
+
 .btn--inactive,
 .btn--inactive:hover,
 .btn--inactive:active,
