[DSABRT-34 & DSABRT-31] Fixes for tickets

--- a/components/authentication-endpoint/src/main/webapp/css/style.css
+++ b/components/authentication-endpoint/src/main/webapp/css/style.css
@@ -2203,6 +2203,13 @@ html.site--full-content .site__fix-bottom {
 .no-cssanimations .spinner__el {
     display: none
 }
+
+.page_footer_message{
+    color: #191970;
+    text-align: center;
+    margin-top: 2rem;
+}
+
 @-webkit-keyframes spinner-fade-anim {
     0% {
         opacity: 1
@@ -2528,6 +2535,7 @@ body {
     border-top: 1px solid #f4f4f4;
     padding-top: 4rem
 }
+.
 @media only screen and (max-width: 47.9375em) {
     .landing-page__points>.grid {
         margin-left: 0
