--- a/components/authentication-endpoint/src/main/webapp/mcx-user-registration/mcresources/css/style.css
+++ b/components/authentication-endpoint/src/main/webapp/mcx-user-registration/mcresources/css/style.css
@@ -13,8 +13,8 @@
 
 .btn-normal {
     color: #fff !important;
-    background-color:#463F61 !important;
-    border-color: #463F61 !important;
+    background-color: #463f61 !important;
+    border-color: #463f61 !important;
     margin-top: 6px !important;
 }
 
