[IDSDEV-809] Fixed Sonar issues

--- a/components/authentication-endpoint/src/main/webapp/mcx-user-registration/mcresources/css/style.css
+++ b/components/authentication-endpoint/src/main/webapp/mcx-user-registration/mcresources/css/style.css
@@ -2913,7 +2913,7 @@ body {
     color: #191970;
     text-align: center;
     margin-top: 2rem;
-    font-size: 0.9em;
+    font-size: .9em;
 }
 
 @media only screen and (max-width: 47.9375em) {
