--- a/components/authentication-endpoint/src/main/webapp/mcx-user-registration/mcresources/css/style.css
+++ b/components/authentication-endpoint/src/main/webapp/mcx-user-registration/mcresources/css/style.css
@@ -32,7 +32,7 @@
     width: 100%;
 }
 
-
+.list-group-heading img{ margin-right:2%;}
 
 .list-group {
     padding-left: 0;
@@ -59,6 +59,7 @@
 	border-radius: 0;
 	border-left: none;
 	border-right: none;
+	padding: .75rem 1.25rem;
 }
 
 .btn--white{ 
