[IDSDEV-888] Fix to update account unlock remaining time in the notification

--- a/components/authentication-endpoint/src/main/webapp/css/custom-common.css
+++ b/components/authentication-endpoint/src/main/webapp/css/custom-common.css
@@ -160,3 +160,10 @@ img.idp-image {
     content:" *";
     color:red;
 }
+
+.basicAuth-label{
+    display: inline-block;
+    max-width: 100%;
+    margin-bottom: 5px;
+    font-weight: 100;
+}
